--- a/ass5.html
+++ b/ass5.html
@@ -12,6 +12,7 @@
 <body>
 
 <div class="header" id="header_1">
+    <h2> Welcome in our memory game</h2>
     <input type="button" class="btn btn-success center-block" id="Button_1" value="Start New Game" onClick="location.href=location.href" >
 
 </div>
