--- a/ass5.html
+++ b/ass5.html
@@ -11,36 +11,44 @@
 </head>
 <body>
 
-
-
-<div class="header" id="header_1">
-    <h2> Welcome in our memory game</h2>
-    <input type="button" class="btn btn-success center-block" id="Button_1" value="Start New Game" onClick="location.href=location.href" >
-
-</div>
-
-<div id="cadre">
-
-    <div class="first_row" id="row_1">
-        <div class="picture1" id="pic_1" onclick="Choosing(0)"><img src="texture.jpg"/></div>
-        <div class="picture1" id="pic_2" onclick="Choosing(1)"><img src="texture.jpg"/> </div>
-        <div class="picture1" id="pic_3" onclick="Choosing(2)"><img src="texture.jpg"/> </div>
-        <div  class="picture1" id="pic_4" onclick="Choosing(3)"><img src="texture.jpg"/></div>
+<div class="container-fluid">
+    <div  id="header_1" class="row">
+         <div class="col-xs-12 col-sm-4 col-lg-12 col-md-12">
+        <h2> Welcome in our memory game</h2>
+        <input type="button" class="btn btn-success center-block" id="Button_1" value="Start New Game" onClick="location.href=location.href" >
+         </div>
     </div>
 
-    <div class="second_row" id="row_2">
-        <div  class="picture2" id="pic_5" onclick="Choosing(4)"><img src="texture.jpg"/></div>
-        <div class="picture2" id="pic_6" onclick="Choosing(5)"><img src="texture.jpg"/></div>
-        <div  class="picture2" id="pic_7" onclick="Choosing(6)"><img src="texture.jpg"/></div>
-        <div  class="picture2"   id="pic_8" onclick="Choosing(7)"><img src="texture.jpg"/></div>
-    </div>
 
-    <div class="third_row" id="row_3">
-        <div class="picture3" id="pic_9" onclick="Choosing(8)"><img src="texture.jpg"/></div>
-        <div class="picture3" id="pic_10" onclick="Choosing(9)"><img src="texture.jpg"/></div>
-        <div class="picture3" id="pic_11" onclick="Choosing(10)"><img src="texture.jpg"/></div>
-        <div  class="picture3" id="pic_12" onclick="Choosing(11)"><img src="texture.jpg"/></div>
-    </div>
+
+
+        <div  id="row_1" class="row">
+            <div class="col-xs-12 col-sm- col-lg-12 col-md-12">
+                <div class="picture1" id="pic_1" onclick="Choosing(0)"><img src="texture.jpg"/></div>
+                <div class="picture1" id="pic_2" onclick="Choosing(1)"><img src="texture.jpg"/> </div>
+                <div class="picture1" id="pic_3" onclick="Choosing(2)"><img src="texture.jpg"/> </div>
+                <div  class="picture1" id="pic_4" onclick="Choosing(3)"><img src="texture.jpg"/></div>
+            </div>
+        </div>
+
+        <div  id="row_2" class="row">
+            <div class="col-xs-12 col-sm-12 col-lg-12 col-md-12">
+                <div  class="picture2" id="pic_5" onclick="Choosing(4)"><img src="texture.jpg"/></div>
+                <div class="picture2" id="pic_6" onclick="Choosing(5)"><img src="texture.jpg"/></div>
+                <div  class="picture2" id="pic_7" onclick="Choosing(6)"><img src="texture.jpg"/></div>
+                <div  class="picture2"   id="pic_8" onclick="Choosing(7)"><img src="texture.jpg"/></div>
+            </div>
+        </div>
+
+        <div  id="row_3" class="row">
+            <div class="col-xs-12 col-sm-12 col-lg-12 col-md-12">
+                <div class="picture3" id="pic_9" onclick="Choosing(8)"><img src="texture.jpg"/></div>
+                <div class="picture3" id="pic_10" onclick="Choosing(9)"><img src="texture.jpg"/></div>
+                <div class="picture3" id="pic_11" onclick="Choosing(10)"><img src="texture.jpg"/></div>
+                <div  class="picture3" id="pic_12" onclick="Choosing(11)"><img src="texture.jpg"/></div>
+            </div>
+        </div>
+
 
 </div>
 
