--- a/memorygame.html
+++ b/memorygame.html
@@ -16,6 +16,10 @@
         <div class="col-xs-12 col-sm-4 col-lg-12 col-md-12">
             <h2 id="title"> Welcome in our memory game</h2>
             <input type="button" class="btn btn-success center-block" id="Button_1" value="Start New Game" onClick="location.href=location.href" >
+        <div class="win" id="win_1">
+            <h2> You won !  you found all the 6 cards  </h2>
+        </div>
+
         </div>
     </div>
 
